additional tests, code smells